--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 quarkus.datasource.db-kind=postgresql
 quarkus.datasource.username=postgres
-quarkus.datasource.password=labcom,2015
+quarkus.datasource.password=admin
 quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/crud_db
 
 quarkus.hibernate-orm.schema-management.strategy=update
