--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/crud_db
 
 quarkus.hibernate-orm.schema-management.strategy=update
 quarkus.hibernate-orm.log.sql=true
+quarkus.resteasy.path=/matricula/api/v1.0
